--- a/src/view/appview.scss
+++ b/src/view/appview.scss
@@ -107,3 +107,12 @@
     }
   }
 }
+
+.solved_window_wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #5353537d;
+}
